--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ li{
     font-weight: 600;
     border: none;
     cursor: pointer;
+    font-size: 1.1rem;
 }
 
 /* Navbar area  */
@@ -31,6 +32,9 @@ nav .row{
     justify-content: space-between;
     align-items: center;
     height: 80px;
+}
+.logo h2{
+    font-size: 2rem;
 }
 nav .row .col-2 ul{
     display: flex;
@@ -53,10 +57,140 @@ nav .row .col-2 ul{
 }
 .banner .banner-area p{
     padding: 20px 0;
+    line-height: 1.6rem;
 }
 .banner .banner-area img{
     max-width: 100%;
 }
 .banner .banner-area .btn-primary {
     margin-bottom: 50px;
+}
+
+/* Team Section Design  */
+
+.team{
+    padding: 80px 0;
+}
+.team-row{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+}
+.team-img img{
+    max-width: 45%;
+    margin: 10px;
+}
+.team-content h2{
+    font-size: 4rem;
+    font-weight: 600;
+}
+.team-content p{
+    line-height: 1.5rem;
+    margin: 20px 0;
+}
+
+/* Feature Area Design  */
+.feature{
+    padding: 80px 0;
+}
+.feature-row{
+    display: flex;
+    gap: 100px;
+}
+.feature-content{
+    max-width: 50%;
+}
+.feature-content h2{
+    font-size: 3rem;  
+    padding-left: 30px;
+    border-left: 5px solid #FF900E;  
+    margin-bottom: 20px;
+}
+.feature-content-box{
+    padding: 20px 30px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06); 
+    margin-top: 20px;
+    border-radius: 5px;
+}
+.feature-content-box h3{
+    margin-bottom: 10px;
+}
+.feature-img img{
+    max-width: 100%;
+}
+.feature-img{
+    position: relative;
+}
+.experience-box{
+    background-color: #FF900E;
+    padding: 50px;
+    border-radius: 10px;
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: -70px;
+}
+.experience-box h2{
+    font-size: 3rem;
+}
+.experience-box p{
+    font-size: 1.5rem;
+}
+
+/* Facts Section Design  */
+
+.fact{
+    padding: 80px 0;
+}
+.fact-top h2{
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+.fact-top p{
+    width: 600px;
+    line-height: 1.5rem;
+}
+.fact-row{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0;
+    gap: 20px;
+}
+.fact-box{
+    border: 1px solid #FF900E;
+    border-radius: 5px;
+    text-align: center;
+    padding: 30px;
+}
+
+/* Sponsor Section Design  */
+.sponsor{
+    padding: 30px 0;
+}
+.sponsor-top{
+    text-align: center;
+    padding-bottom: 50px;
+}
+.sponsor-top h2{
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+.sponsor-top p{
+    max-width: 50%;
+    margin: 0 auto;
+}
+.sponsor-row{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+.footer{
+    background: rgba(255, 144, 14, 0.10);
+    border-radius: 5px;
+    text-align: center;
+    padding: 30px;
+}
+footer{
+    padding: 80px 0;
 }
